feat: Update to PaperMC's new chat and registry APIs, refactor update checker to use URI, and improve ZombieToolsFeature robustness.